--- a/meme_resourcepack/assets/minecraft/lang/zh_meme.json
+++ b/meme_resourcepack/assets/minecraft/lang/zh_meme.json
@@ -122,10 +122,10 @@
     "advancements.nether.brew_potion.title": "本地酿造厂",
     "advancements.nether.charge_respawn_anchor.description": "为锚台充满能量。\n注：谐音梗是要扣钱的。",
     "advancements.nether.charge_respawn_anchor.title": "锚没有⑨条命",
-    "advancements.nether.create_beacon.description": "建造并放置一个培根方块",
-    "advancements.nether.create_beacon.title": "带培根方块回家",
-    "advancements.nether.create_full_beacon.description": "让一个培根方块发挥最大功效",
-    "advancements.nether.create_full_beacon.title": "最亮的信标",
+    "advancements.nether.create_beacon.description": "建造并放置一个5G基站",
+    "advancements.nether.create_beacon.title": "带5G网络回家",
+    "advancements.nether.create_full_beacon.description": "让一个5G基站发挥最大功效",
+    "advancements.nether.create_full_beacon.title": "网速拉满",
     "advancements.nether.distract_piglin.description": "用黄油质物品吸引猪刚鬣",
     "advancements.nether.distract_piglin.title": "哦咿！闪亮亮！",
     "advancements.nether.explore_nether.description": "探索所有尼德兰的生物群系",
@@ -1098,7 +1098,7 @@
     "block.minecraft.barrel": "木桶",
     "block.minecraft.barrier": "立 入 禁 止",
     "block.minecraft.basalt": "玄武岩",
-    "block.minecraft.beacon": "培根方块",
+    "block.minecraft.beacon": "5G基站",
     "block.minecraft.beacon.primary": "主buff",
     "block.minecraft.beacon.secondary": "辅buff",
     "block.minecraft.bed.no_sleep": "你想做白日梦？",
